Fixed placed scrollbars without overflow G-006

--- a/src/app/components/department/department.component.scss
+++ b/src/app/components/department/department.component.scss
@@ -101,7 +101,7 @@
         .department-incidents {
           .department-incidents-list {
             max-height: 400px;
-            overflow-y: scroll;
+            overflow-y: auto;
           }
         }
       }
