--- a/src/app/pages/departments-overview/departments-overview.component.scss
+++ b/src/app/pages/departments-overview/departments-overview.component.scss
@@ -3,7 +3,7 @@
 .departments-container {
   width: 80%;
   margin: 15px auto;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: calc(100vh - 87px);
 
   @include md-phone-only {
